@@ -1,1 +1,1 @@
-8d8f75a2e59461ba30f85e47188815f2  humla_repo/addons.xml
+a83b3328b45e22e110895f02e46b2e31  humla_repo/addons.xml
