@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.einthusan"
        name="Einthusan"
-       version="0.0.1"
+       version="0.0.2"
        provider-name="humla">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
